Add tmux resurrect plugin

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -15,3 +15,6 @@ set -g mode-mouse on
 set -g mouse-resize-pane on
 set -g mouse-select-pane on
 set -g mouse-select-window on
+
+# tmux-resurrect (must be declared last)
+run-shell /home/art/git/tmux-resurrect/resurrect.tmux
