Prevent tmux from renaming windows

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -16,5 +16,8 @@ set -g mouse-resize-pane on
 set -g mouse-select-pane on
 set -g mouse-select-window on
 
+# Don't automatically rename windows
+set -g allow-rename off
+
 # tmux-resurrect (must be declared last)
 run-shell /home/art/git/tmux-resurrect/resurrect.tmux
