Automatically renumber tmux windows

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -16,6 +16,9 @@ set -g mouse-resize-pane on
 set -g mouse-select-pane on
 set -g mouse-select-window on
 
+# Automatically renumber windows
+set-option -g renumber-windows on
+
 # Don't automatically rename windows
 set -g allow-rename off
 
