Add JSCS to SublimeLinter

--- a/jscs/.jscsrc
+++ b/jscs/.jscsrc
@@ -8,7 +8,6 @@
     "disallowMultipleLineStrings": true,
     "disallowNamedUnassignedFunctions": true,
     "disallowNewlineBeforeBlockStatements": true,
-    "disallowPaddingNewlinesInBlocks": true,
     "disallowParenthesesAroundArrowParam": true,
     "disallowQuotedKeysInObjects": true,
     "disallowSpaceAfterObjectKeys": true,
@@ -38,7 +37,41 @@
     "requireParenthesesAroundIIFE": true,
     "requireSemicolons": true,
     "requireShorthandArrowFunctions": true,
-    "requireSpaceAfterBinaryOperators": true,
+    "requireSpaceAfterBinaryOperators": [
+        "=",
+        "+=",
+        "-=",
+        "*=",
+        "/=",
+        "%=",
+        "<<=",
+        ">>=",
+        ">>>=",
+        "&=",
+        "|=",
+        "^=",
+        "+=",
+        "-",
+        "*",
+        "/",
+        "%",
+        "<<",
+        ">>",
+        ">>>",
+        "&",
+        "|",
+        "^",
+        "&&",
+        "||",
+        "===",
+        "==",
+        ">=",
+        "<=",
+        "<",
+        ">",
+        "!=",
+        "!=="
+    ],
     "requireSpaceAfterKeywords": [
         "do",
         "for",
@@ -55,7 +88,41 @@
         "typeof"
     ],
     "requireSpaceAfterLineComment": true,
-    "requireSpaceBeforeBinaryOperators": true,
+    "requireSpaceBeforeBinaryOperators": [
+        "=",
+        "+=",
+        "-=",
+        "*=",
+        "/=",
+        "%=",
+        "<<=",
+        ">>=",
+        ">>>=",
+        "&=",
+        "|=",
+        "^=",
+        "+=",
+        "-",
+        "*",
+        "/",
+        "%",
+        "<<",
+        ">>",
+        ">>>",
+        "&",
+        "|",
+        "^",
+        "&&",
+        "||",
+        "===",
+        "==",
+        ">=",
+        "<=",
+        "<",
+        ">",
+        "!=",
+        "!=="
+    ],
     "requireSpaceBeforeBlockStatements": true,
     "requireSpaceBeforeKeywords": [
         "do",
@@ -69,8 +136,7 @@
         "void",
         "while",
         "with",
-        "return",
-        "typeof"
+        "return"
     ],
     "requireSpaceBeforeObjectValues": true,
     "requireSpaceBetweenArguments": true,
