Fix tmux mousing, open new panes in current directory

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,7 +1,7 @@
 # Pane splitting
 unbind %
-bind | split-window -h
-bind - split-window -v
+bind | split-window -h -c '#{pane_current_path}'
+bind - split-window -v -c '#{pane_current_path}'
 
 # Use UTF8
 set -g utf8
@@ -11,10 +11,13 @@ set-window-option -g utf8 on
 set -g history-limit 4096
 
 # Mouse mode
-set -g mode-mouse on
-set -g mouse-resize-pane on
-set -g mouse-select-pane on
-set -g mouse-select-window on
+set -g mouse-utf8 on
+set -g mouse on
+
+# Return pre-2.1 mousing behaviour
+# https://github.com/tmux/tmux/issues/145
+bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'select-pane -t=; copy-mode -e; send-keys -M'"
+bind -n WheelDownPane select-pane -t= \; send-keys -M
 
 # Automatically renumber windows
 set-option -g renumber-windows on
