--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,10 +1,12 @@
+# Reload config by running `tmux source-file ~/.tmux.conf`
+
 # Pane splitting
 unbind %
 bind | split-window -h -c '#{pane_current_path}'
 bind - split-window -v -c '#{pane_current_path}'
 
 # Scrollback history
-set -g history-limit 4096
+set -g history-limit 65536
 
 # Mouse mode
 set -g mouse on
@@ -19,6 +21,12 @@ set-option -g renumber-windows on
 
 # Don't automatically rename windows
 set -g allow-rename off
+
+# Set window title to current directory base name
+# http://stackoverflow.com/a/35513050
+set -g window-status-format '#I:#(pwd="#{pane_current_path}"; echo ${pwd####*/})#F'
+set -g window-status-current-format '#I:#(pwd="#{pane_current_path}"; echo ${pwd####*/})#F'
+set-option -g status-interval 1
 
 # tmux-resurrect (must be declared last)
 run-shell /home/art/git/tmux-resurrect/resurrect.tmux
