--- a/i3/config
+++ b/i3/config
@@ -103,6 +103,9 @@ bindsym $mod+Shift+8 move container to workspace 8
 bindsym $mod+Shift+9 move container to workspace 9
 bindsym $mod+Shift+0 move container to workspace 10
 
+# toggle mute (don't use amixer! see chaidarun.com/arch-notes)
+bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute 0 toggle
+
 # reload the configuration file
 bindsym $mod+Shift+j reload
 # restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
@@ -136,7 +139,7 @@ mode "resize" {
 
 bindsym $mod+p mode "resize"
 
-bindsym $mod+l exec ~/.config/i3/lock-screen.sh
+bindsym $mod+l exec --no-startup-id ~/.config/i3/lock-screen.sh
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
