Reduce tmux status bar noise

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -22,6 +22,10 @@ set-option -g renumber-windows on
 # Don't automatically rename windows
 set -g allow-rename off
 
+# Hide everything in status bar except window names
+set -g status-left ''
+set -g status-right ''
+
 # Set window title to current directory base name
 # http://stackoverflow.com/a/35513050
 set -g window-status-format '#I:#(pwd="#{pane_current_path}"; echo ${pwd####*/})#F'
