--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -5,32 +5,25 @@ unbind %
 bind | split-window -h -c '#{pane_current_path}'
 bind - split-window -v -c '#{pane_current_path}'
 
-# Scrollback history
-set -g history-limit 65536
-
-# Mouse mode
-set -g mouse on
-
 # Return pre-2.1 mousing behaviour
 # https://github.com/tmux/tmux/issues/145
 bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'select-pane -t=; copy-mode -e; send-keys -M'"
 bind -n WheelDownPane select-pane -t= \; send-keys -M
 
-# Automatically renumber windows
-set-option -g renumber-windows on
-
-# Don't automatically rename windows
+# Settings
 set -g allow-rename off
-
-# Hide everything in status bar except window names
+set -g history-limit 65536
+set -g mouse on
+set -g renumber-windows on
+set -g status-interval 10
 set -g status-left ''
-set -g status-right ''
-
-# Set window title to current directory base name
+set -g status-right '#(kubectl config current-context) '
+set -g status-style bg="#333333"
 # http://stackoverflow.com/a/35513050
-set -g window-status-format '#I:#(pwd="#{pane_current_path}"; echo ${pwd####*/})#F'
-set -g window-status-current-format '#I:#(pwd="#{pane_current_path}"; echo ${pwd####*/})#F'
-set-option -g status-interval 1
+set -g window-status-format ' #I #(pwd="#{pane_current_path}"; echo ${pwd####*/}) '
+set -g window-status-current-bg yellow
+set -g window-status-current-format ' #I #(pwd="#{pane_current_path}"; echo ${pwd####*/}) '
+set -g xterm-keys on
 
 # tmux-resurrect (must be declared last)
 run-shell /home/art/git/tmux-resurrect/resurrect.tmux
