Fix .zshrc for Raspberry Pi

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -22,6 +22,7 @@ set -g status-style bg="#333333"
 # http://stackoverflow.com/a/35513050
 set -g window-status-format ' #I #(pwd="#{pane_current_path}"; echo ${pwd####*/}) '
 set -g window-status-current-bg yellow
+set -g window-status-current-fg black
 set -g window-status-current-format ' #I #(pwd="#{pane_current_path}"; echo ${pwd####*/}) '
 set -g xterm-keys on
 
