--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -17,7 +17,7 @@ set -g mouse on
 set -g renumber-windows on
 set -g status-interval 10
 set -g status-left ''
-set -g status-right ''
+set -g status-right '#(hostname) '
 set -g status-style bg="#333333"
 # http://stackoverflow.com/a/35513050
 set -g window-status-format ' #I #(pwd="#{pane_current_path}"; echo ${pwd####*/}) '
