Start tmux window indices at 1

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,6 +1,7 @@
 # Reload config by running `tmux source-file ~/.tmux.conf`
 
 # Pane splitting
+unbind '"'
 unbind %
 bind | split-window -h -c '#{pane_current_path}'
 bind - split-window -v -c '#{pane_current_path}'
@@ -12,6 +13,7 @@ bind -n WheelDownPane select-pane -t= \; send-keys -M
 
 # Settings
 set -g allow-rename off
+set -g base-index 1
 set -g history-limit 65536
 set -g mouse on
 set -g renumber-windows on
