Show uptime in i3 status bar

--- a/i3blocks/config
+++ b/i3blocks/config
@@ -93,6 +93,11 @@ interval=30
 label=❄
 interval=10
 
+[uptime]
+command=uptime | awk '{print $3 " " $4}' | sed 's/,.*//'
+label=UP
+interval=36000
+
 [memory]
 command=~/.config/i3blocks/blocklets/memory
 label=MEM
