--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -19,13 +19,12 @@ set -g mouse on
 set -g renumber-windows on
 set -g status-interval 10
 set -g status-left ''
-set -g status-right '#(hostname) '
+set -g status-right '#(hostname)'
 set -g status-style bg="#333333"
 # http://stackoverflow.com/a/35513050
-set -g window-status-format ' #I #(pwd="#{pane_current_path}"; echo ${pwd####*/}) '
-set -g window-status-current-bg yellow
-set -g window-status-current-fg black
-set -g window-status-current-format ' #I #(pwd="#{pane_current_path}"; echo ${pwd####*/}) '
+set -g window-status-format '#I #(echo #{b:pane_current_path} | sed "s/duolingo-\([a-z]\)/\1/")'
+set -g window-status-current-style bg=yellow,fg=black
+set -g window-status-current-format '#I #(echo #{b:pane_current_path} | sed "s/duolingo-\([a-z]\)/\1/")'
 set -g xterm-keys on
 
 # tmux-resurrect (must be declared last)
