--- a/i3blocks/config
+++ b/i3blocks/config
@@ -14,6 +14,11 @@ signal=10
 command=hostname -i | awk '{$1=$1};1'
 interval=10
 
+[bandwidth]
+INLABEL=▼ 
+OUTLABEL=▲ 
+interval=5
+
 [battery]
 label=⚡ 
 interval=30
