--- a/x/.xbindkeysrc
+++ b/x/.xbindkeysrc
@@ -2,5 +2,8 @@
 # Run `xbindkeys -k` to get the keycodes for a combo
 
 # Paste email (need to sleep so that typing doesn't start while keys are still down)
-"sleep 0.3 && xdotool type artchaidarun@gmail.com"
+# base64-encoded to evade crude GitHub scrapers ¯\_(ツ)_/¯
+"sleep 0.3 && xdotool type $(printf %s YXJ0Y2hhaWRhcnVuQGdtYWlsLmNvbQ== | base64 -d)"
     Control+Alt+Mod2 + e
+"sleep 0.3 && xdotool type $(printf %s YXJ0QGR1b2xpbmdvLmNvbQ== | base64 -d)"
+    Control+Alt+Mod2 + d
