Add shortcut for reordering tmux windows

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -11,6 +11,11 @@ bind - split-window -v -c '#{pane_current_path}'
 bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'select-pane -t=; copy-mode -e; send-keys -M'"
 bind -n WheelDownPane select-pane -t= \; send-keys -M
 
+# Window reordering
+# https://superuser.com/questions/343572/how-do-i-reorder-tmux-windows
+bind-key Left swap-window -t -1\; select-window -t -1
+bind-key Right swap-window -t +1\; select-window -t +1
+
 # Settings
 set -g allow-rename off
 set -g base-index 1
