Update blocklet path

--- a/i3blocks/config
+++ b/i3blocks/config
@@ -1,6 +1,6 @@
 # Adapted from /usr/lib/i3blocks/config.example
 
-command=/usr/lib/i3blocks/$BLOCK_NAME/$BLOCK_NAME
+command=/usr/lib/i3blocks/$BLOCK_NAME
 separator_block_width=15
 markup=none
 
