--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,4 +3,4 @@ repos:
     rev: 1.5.2
     hooks:
       - id: duolingo
-        exclude: i3blocks/config
+        exclude: easystroke|i3blocks/config
