Set default tmux shell to zsh

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -19,6 +19,8 @@ bind-key Right swap-window -t +1\; select-window -t +1
 # Settings
 set -g allow-rename off
 set -g base-index 1
+set -g default-command /usr/bin/zsh
+set -g default-shell /usr/bin/zsh
 set -g history-limit 65536
 set -g mouse on
 set -g renumber-windows on
