--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -6,6 +6,7 @@
 [core]
 	autocrlf = input
 	editor = nano
+	excludesfile = /home/art/.gitignore
 	pager = less -+FX
 [push]
 	autoSetupRemote = true
