--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -19,8 +19,8 @@ bind-key Right swap-window -t +1\; select-window -t +1
 # Settings
 set -g allow-rename off
 set -g base-index 1
-set -g default-command /usr/bin/zsh
-set -g default-shell /usr/bin/zsh
+set -g default-command /bin/zsh
+set -g default-shell /bin/zsh
 set -g history-limit 65536
 set -g mouse on
 set -g renumber-windows on
@@ -33,6 +33,3 @@ set -g window-status-format '#I #(echo #{b:pane_current_path} | sed "s/duolingo-
 set -g window-status-current-style bg=yellow,fg=black
 set -g window-status-current-format '#I #(echo #{b:pane_current_path} | sed "s/duolingo-\([a-z]\)/\1/")'
 set -g xterm-keys on
-
-# tmux-resurrect (must be declared last)
-run-shell /home/art/git/tmux-resurrect/resurrect.tmux
