--- a/x/.xbindkeysrc
+++ b/x/.xbindkeysrc
@@ -11,5 +11,5 @@
     Control+Alt+Mod2 + d
 
 # Toggle between Dvorak and Pattachote
-"if setxkbmap -query | grep -q dvorak; then setxkbmap -layout th -variant pat && xmodmap ${HOME}/.Xmodmap; else setxkbmap dvorak && xmodmap ${HOME}/.Xmodmap; fi"
+"if setxkbmap -query | grep -q dvorak; then setxkbmap -layout th -variant pat && xmodmap ${HOME}/.Xmodmap; else setxkbmap us dvorak && xmodmap ${HOME}/.Xmodmap; fi"
     Print
