--- a/alacritty/alacritty.toml
+++ b/alacritty/alacritty.toml
@@ -33,3 +33,14 @@ style = "Beam"
 
 [font]
 size = 7
+
+[font.offset]
+x = 0
+y = 1
+
+[window]
+decorations = "none"
+
+[window.padding]
+x = 2
+y = 2
