--- a/alacritty/alacritty.toml
+++ b/alacritty/alacritty.toml
@@ -1,5 +1,3 @@
-live_config_reload = true
-
 [colors]
 draw_bold_text_with_bright_colors = true
 
@@ -37,6 +35,9 @@ size = 7
 [font.offset]
 x = 0
 y = 1
+
+[general]
+live_config_reload = true
 
 [window]
 decorations = "none"
