--- a/zed/settings.json
+++ b/zed/settings.json
@@ -1,20 +1,94 @@
-// Zed settings
-//
-// For information on how to configure Zed, see the Zed
-// documentation: https://zed.dev/docs/configuring-zed
-//
-// To see all of Zed's default settings without changing your
-// custom settings, run `zed: open default settings` from the
-// command palette (cmd-shift-p / ctrl-shift-p)
+// https://zed.dev/docs/configuring-zed
+// `zed: open default settings`
 {
+  "assistant": {
+    "button": false,
+    "version": "2"
+  },
+  "base_keymap": "SublimeText",
+  "buffer_font_family": "DejaVu Sans Mono",
+  "buffer_font_size": 12,
+  "buffer_line_height": "standard",
+  "chat_panel": {
+    "button": false
+  },
+  "collaboration_panel": {
+    "button": false
+  },
+  "current_line_highlight": "gutter",
+  // Match Sublime Text's Twilight theme
+  // Options: https://github.com/zed-industries/zed/blob/main/assets/themes/one/one.json
+  "experimental.theme_overrides": {
+    "editor.background": "#191919",
+    "editor.document_highlight.read_background": "#555",
+    "editor.gutter.background": "#191919",
+    "panel.background": "#191919",
+    "players": [
+       {
+         "cursor": "#ffffffff",
+         "selection": "#555"
+       }
+    ]
+  },
+  "format_on_save": "off",
+  "git": {
+    "inline_blame": {
+      "enabled": false
+    }
+  },
+  "gutter": {
+    "code_actions": false,
+    "folds": false,
+    "runnables": false
+  },
+  "multi_cursor_modifier": "cmd_or_ctrl",
+  "outline_panel": {
+    "button": false
+  },
+  "preview_tabs": {
+    "enabled": false
+  },
+  "project_panel": {
+    "button": false,
+    "file_icons": false,
+    "folder_icons": false,
+    "indent_size": 13
+  },
+  "scroll_beyond_last_line": "off",
+  "search": {
+    "case_sensitive": true,
+    "regex": true,
+    "whole_word": false
+  },
+  "soft_wrap": "editor_width",
+  "tab_bar": {
+    "show_nav_history_buttons": false
+  },
+  "tab_size": 2,
+  "tabs": {
+    "activate_on_close": "neighbour",
+    "git_status": true
+  },
   "telemetry": {
+    "diagnostics": false,
     "metrics": false
   },
-  "ui_font_size": 16,
-  "buffer_font_size": 16,
+  "terminal": {
+    "blinking": "on",
+    "button": false,
+    "cursor_shape": "bar",
+    "line_height": "standard"
+  },
   "theme": {
-    "mode": "system",
+    "dark": "Twilight",
     "light": "One Light",
-    "dark": "One Dark"
-  }
+    "mode": "dark"
+  },
+  "toolbar": {
+    "breadcrumbs": false,
+    "quick_actions": false,
+    "selections_menu": false
+  },
+  "ui_font_size": 14,
+  "wrap_guides": [80, 100]
 }
