--- a/alacritty/alacritty.mac.toml
+++ b/alacritty/alacritty.mac.toml
@@ -1,5 +1,3 @@
-live_config_reload = true
-
 [colors]
 draw_bold_text_with_bright_colors = true
 
@@ -40,6 +38,9 @@ family = "DejaVu Sans Mono"
 [font.offset]
 x = 0
 y = 1
+
+[general]
+live_config_reload = true
 
 [window.padding]
 x = 2
