--- a/code/settings.json
+++ b/code/settings.json
@@ -1,45 +1,50 @@
 {
-    "telemetry.enableCrashReporter": false,
-    "telemetry.enableTelemetry": false,
-    "editor.minimap.enabled": false,
-    "workbench.startupEditor": "newUntitledFile",
-    "editor.fontFamily": "Monospace",
-    "editor.fontSize": 12,
-    "editor.multiCursorModifier": "ctrlCmd",
-    "editor.rulers": [80, 100],
-    "editor.wordWrap": "on",
-    "files.exclude": {
-        "**/node_modules": true,
-        "**/.classpath": true,
-        "**/.project": true,
-        "**/.settings": true,
-        "**/.factorypath": true
-    },
-    "editor.glyphMargin": false,
-    "window.restoreWindows": "all",
-    "workbench.editor.untitled.hint": "hidden",
-    "keyboard.dispatch": "keyCode",
-    "git.autofetch": true,
-    "editor.folding": false,
-    "terminal.integrated.cursorStyle": "line",
-    "terminal.integrated.fontSize": 12,
-    "problems.decorations.enabled": false,
-    "workbench.panel.defaultLocation": "right",
-    "workbench.editor.decorations.badges": false,
-    "workbench.editor.focusRecentEditorAfterClose": false,
-    "workbench.editor.scrollToSwitchTabs": true,
-    "update.mode": "manual",
-    "editor.suggestSelection": "first",
-    "vsintellicode.modify.editor.suggestSelection": "automaticallyOverrodeDefaultValue",
-    "files.trimTrailingWhitespace": true,
-    "files.insertFinalNewline": true,
-    "files.trimFinalNewlines": true,
-    "workbench.iconTheme": null,
-    "explorer.autoReveal": false,
-    "window.titleBarStyle": "custom",
-    "workbench.colorTheme": "Predawn Twilight",
-    "workbench.colorCustomizations": {
-        "statusBar.background" : "#303030",
-        "statusBarItem.remoteBackground" : "#303030"
-    }
+  "editor.folding": false,
+  "editor.fontFamily": "Monospace",
+  "editor.fontSize": 12,
+  "editor.glyphMargin": false,
+  "editor.inlineSuggest.enabled": true,
+  "editor.minimap.enabled": false,
+  "editor.multiCursorModifier": "ctrlCmd",
+  "editor.rulers": [
+    80,
+    100
+  ],
+  "editor.suggestSelection": "first",
+  "editor.wordWrap": "on",
+  "explorer.autoReveal": false,
+  "files.exclude": {
+    "**/.classpath": true,
+    "**/.factorypath": true,
+    "**/.project": true,
+    "**/.settings": true,
+    "**/node_modules": true
+  },
+  "files.insertFinalNewline": true,
+  "files.trimFinalNewlines": true,
+  "files.trimTrailingWhitespace": true,
+  "git.autofetch": true,
+  "keyboard.dispatch": "keyCode",
+  "problems.decorations.enabled": false,
+  "security.workspace.trust.untrustedFiles": "open",
+  "telemetry.enableCrashReporter": false,
+  "telemetry.enableTelemetry": false,
+  "terminal.integrated.cursorStyle": "line",
+  "terminal.integrated.fontSize": 12,
+  "update.mode": "manual",
+  "vsintellicode.modify.editor.suggestSelection": "automaticallyOverrodeDefaultValue",
+  "window.restoreWindows": "all",
+  "window.titleBarStyle": "custom",
+  "workbench.colorCustomizations": {
+    "statusBar.background": "#303030",
+    "statusBarItem.remoteBackground": "#303030"
+  },
+  "workbench.editor.decorations.badges": false,
+  "workbench.editor.focusRecentEditorAfterClose": false,
+  "workbench.editor.scrollToSwitchTabs": true,
+  "workbench.editor.untitled.hint": "hidden",
+  "workbench.iconTheme": null,
+  "workbench.panel.defaultLocation": "right",
+  "workbench.startupEditor": "newUntitledFile",
+  "workbench.colorTheme": "Twilight"
 }
