Copy more Sublime config to VSCode

--- a/code/settings.json
+++ b/code/settings.json
@@ -1,16 +1,26 @@
 {
+  "breadcrumbs.enabled": false,
+  "crashReporting.enabled": "off",
+  "editor.find.addExtraSpaceOnTop": false,
   "editor.folding": false,
-  "editor.fontFamily": "Monospace",
+  "editor.fontFamily": "DejaVu Sans Mono",
   "editor.fontSize": 12,
   "editor.glyphMargin": false,
+  "editor.hideCursorInOverviewRuler": true,
   "editor.inlineSuggest.enabled": true,
-  "editor.minimap.enabled": false,
+  "editor.lineHeight": 1.25,
+  "editor.matchBrackets": "never",
   "editor.multiCursorModifier": "ctrlCmd",
+  "editor.overviewRulerBorder": false,
+  "editor.renderLineHighlight": "none",
   "editor.rulers": [
     80,
     100
   ],
+  "editor.scrollBeyondLastLine": false,
+  "editor.stickyScroll.enabled": false,
   "editor.suggestSelection": "first",
+  "editor.tabSize": 2,
   "editor.wordWrap": "on",
   "explorer.autoReveal": false,
   "files.exclude": {
@@ -20,15 +30,18 @@
     "**/.settings": true,
     "**/node_modules": true
   },
+  "files.hotExit": "onExitAndWindowClose",
   "files.insertFinalNewline": true,
   "files.trimFinalNewlines": true,
   "files.trimTrailingWhitespace": true,
   "git.autofetch": true,
+  "git.decorations.enabled": false,
+  "git.enabled": false,
   "keyboard.dispatch": "keyCode",
+  "makefile.configureOnOpen": false,
   "problems.decorations.enabled": false,
+  "scm.diffDecorations": "none",
   "security.workspace.trust.untrustedFiles": "open",
-  "telemetry.enableCrashReporter": false,
-  "telemetry.enableTelemetry": false,
   "terminal.integrated.cursorStyle": "line",
   "terminal.integrated.fontSize": 12,
   "update.mode": "manual",
@@ -39,12 +52,19 @@
     "statusBar.background": "#303030",
     "statusBarItem.remoteBackground": "#303030"
   },
+  "workbench.colorTheme": "Twilight",
   "workbench.editor.decorations.badges": false,
+  "workbench.editor.empty.hint": "hidden",
+  "workbench.editor.enablePreview": false,
   "workbench.editor.focusRecentEditorAfterClose": false,
-  "workbench.editor.scrollToSwitchTabs": true,
-  "workbench.editor.untitled.hint": "hidden",
+  "workbench.editor.highlightModifiedTabs": true,
+  "workbench.editor.pinnedTabSizing": "compact",
+  "workbench.editor.scrollToSwitchTabs": false,
+  "workbench.editor.tabActionCloseVisibility": false,
+  "workbench.editor.tabActionUnpinVisibility": false,
+  "workbench.editor.tabSizing": "shrink",
+  "workbench.editor.wrapTabs": true,
   "workbench.iconTheme": null,
   "workbench.panel.defaultLocation": "right",
-  "workbench.startupEditor": "newUntitledFile",
-  "workbench.colorTheme": "Twilight"
+  "workbench.startupEditor": "newUntitledFile"
 }
