--- a/code/settings.json
+++ b/code/settings.json
@@ -47,6 +47,7 @@
   "update.mode": "manual",
   "vsintellicode.modify.editor.suggestSelection": "automaticallyOverrodeDefaultValue",
   "window.restoreWindows": "all",
+  "window.title": "${activeEditorMedium}${separator}${rootName}${separator}${profileName}",
   "window.titleBarStyle": "custom",
   "workbench.colorCustomizations": {
     "statusBar.background": "#303030",
