--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -25,3 +25,8 @@
 [push]
   autoSetupRemote = true
   default = simple
+[filter "lfs"]
+  clean = git-lfs clean -- %f
+  process = git-lfs filter-process
+  required = true
+  smudge = git-lfs smudge -- %f
