Add command for copying tmux buffer to clipboard

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -16,6 +16,9 @@ bind -n WheelDownPane select-pane -t= \; send-keys -M
 bind-key Left swap-window -t -1\; select-window -t -1
 bind-key Right swap-window -t +1\; select-window -t +1
 
+# Copy entire buffer to clipboard
+bind-key C-y capture-pane -S - \; save-buffer /tmp/tmux-buffer \; run-shell "pbcopy < /tmp/tmux-buffer" \; delete-buffer \; display-message "Buffer copied to clipboard"
+
 # Settings
 set -g allow-rename off
 set -g base-index 1
