--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -29,7 +29,7 @@ set -g mouse on
 set -g renumber-windows on
 set -g status-interval 10
 set -g status-left ''
-set -g status-right '#(hostname)'
+set -g status-right '#(cat /etc/hostname)'
 set -g status-style bg="#333333"
 # http://stackoverflow.com/a/35513050
 set -g window-status-format '#I #(echo #{b:pane_current_path} | sed "s/duolingo-\([a-z]\)/\1/")'
