Show local IP in tmux

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -27,9 +27,9 @@ set -g default-shell /bin/zsh
 set -g history-limit 65536
 set -g mouse on
 set -g renumber-windows on
-set -g status-interval 10
+set -g status-interval 60
 set -g status-left ''
-set -g status-right '#(cat /etc/hostname)'
+set -g status-right '#(cat /etc/hostname).#(ip a | grep -oE "192\.168\.0\.[0-9]+/24" | cut -d. -f4 | cut -d/ -f1)'
 set -g status-style bg="#333333"
 # http://stackoverflow.com/a/35513050
 set -g window-status-format '#I #(echo #{b:pane_current_path} | sed "s/duolingo-\([a-z]\)/\1/")'
