Disable VSCode telemetry

--- a/code/settings.json
+++ b/code/settings.json
@@ -48,6 +48,10 @@
   "scm.diffDecorations": "none",
   "search.searchEditor.reusePriorSearchConfiguration": true,
   "security.workspace.trust.untrustedFiles": "open",
+  "telemetry.editStats.enabled": false,
+  "telemetry.enableTelemetry": false,
+  "telemetry.feedback.enabled": false,
+  "telemetry.telemetryLevel": "off",
   "terminal.integrated.cursorStyle": "line",
   "terminal.integrated.fontSize": 12,
   "update.mode": "manual",
