--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -6,6 +6,8 @@
 # instead use Git's GIT_CONFIG_COUNT/GIT_CONFIG_KEY_0/GIT_CONFIG_VALUE_0/etc
 # env vars to set these values dynamically at commit time
 
+[advice]
+  detachedHead = false
 [blame]
   # Commenting this out for now to avoid annoying `fatal: could not open object
   # name list: .git-blame-ignore-revs` error in repos that don't
